<resources>
    <string name="app_name">Asystent Kierowcy</string>

    <!-- BUTTONS -->

    <string name="refueling_button">Tankowanie</string>
    <string name="repairs_button">Naprawy</string>
    <string name="gallery_button">Galeria</string>
    <string name="about_vehicle_button">O pojeździe</string>
    <string name="about_author_button">O autorze</string>

    <string name="add_refueling_button">Zatankuj</string>
    <string name="summary_refueling_button">Podsumowanie</string>

    <string name="add_repair_button">Dodaj naprawę</string>
    <string name="summary_button">Podsumowanie</string>
</resources>
