<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="pl.filipmarkiewicz.asystentkierowcy.HomeActivity"
        android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/mainToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.MyApp.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        style="@style/DarkItem"
        />

    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="pl.filipmarkiewicz.asystentkierowcy.HomeActivity"
            android:orientation="vertical"
            android:layout_marginTop="40px">
            <Button
                android:id="@+id/refuelingButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/refueling_button"
                android:onClick="invokeRefuelingActivity"
                />

            <Button
                android:id="@+id/repairsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/repairs_button"
                android:onClick="invokeRepairsActivity"
                />

            <Button
                android:id="@+id/galleryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/gallery_button"
                />

            <Button
                android:id="@+id/aboutVehicleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/about_vehicle_button"
                android:onClick="invokeAboutVehicleActivity"
                />

            <Button
                android:id="@+id/aboutAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/about_author_button"
                android:onClick="invokeAboutAuthor"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
